--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,16 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_calendar:
+    path: /calendar/{week}
+    controller: App\Controller\ClassSessionController::index
+    requirements:
+        week: \d+
+    defaults:
+        week: null
+
+app_reserve:
+    path: /reserve/{id}
+    controller: App\Controller\ClassSessionController::reserve
+    methods: [GET, POST]
