update totale de mes entitees pour une optimisation meilleur

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,7 +43,7 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
         # - { path: ^/reserve, roles: ROLE_USER }
         - { path: ^/booking, roles: ROLE_USER }
-        - { path: ^/course/new, roles: ROLE_ADMIN }
+        # - { path: ^/course/new, roles: ROLE_ADMIN }
 
 when@test:
     security:
